--- a/style.css
+++ b/style.css
@@ -82,3 +82,49 @@ header a {
     display: flex;
     max-width: 49%;
 }
+
+.middle-part {
+    padding-top: 10px; 
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 110px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information-header {
+    color: #1F2937;
+    font-size: 40px;
+    font-weight: 1000;
+    padding: 30px 0px;
+}
+
+.content {
+    display: flex;
+    flex: 1;
+    gap: 100px;
+    justify-content: space-between;
+}
+
+.content img {
+    width: 220px;
+    height: auto;
+    border-radius: 10%;
+    border: 5px solid #3882F6;
+}
+
+.img-and-text {
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-subtext {
+    text-align: center;
+    color: #1F2937;
+    font-size: 22px;
+}
+
