--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     padding-top: 10px; 
     padding-left: 300px;
     padding-right: 300px;
-    padding-bottom: 100px;
+    padding-bottom: 130px;
     color: #F9FAF8;
 }
 
@@ -87,7 +87,7 @@ header a {
     padding-top: 10px; 
     padding-left: 300px;
     padding-right: 300px;
-    padding-bottom: 110px;
+    padding-bottom: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -128,3 +128,28 @@ header a {
     font-size: 22px;
 }
 
+
+
+
+.quote-part {
+    background-color: #E5E7EB;
+    padding-top: 150px; 
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 150px;
+}
+
+.quote {
+    padding: 0px 150px;
+    font-size: 40px;
+    line-height: 120%;
+    font-style: italic;
+    color: #465263;
+}
+
+.author {
+    padding: 0px 150px;
+    font-size: 30px;
+    font-weight: 900;
+    text-align: end;
+}
